plugins {
    id 'com.android.library'
 }

configurations {
    saferallocAndroidNatives
}
 
android {
    compileSdk 36
    namespace 'org.ngengine.platform.android'  

    defaultConfig {
        minSdk 33
        targetSdk 33
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        
    }
    
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    sourceSets {
        main {
            jniLibs.srcDir("$buildDir/generated/saferalloc/jniLibs")
        }
        androidTest {
            jniLibs.srcDir("$buildDir/generated/saferalloc/jniLibs")
        }
    }

    testOptions {
        animationsDisabled true
    }

     publishing {
        singleVariant("release")
    }
}

dependencies {
    api project(':nge-platform-common')
    
    implementation libs.gson
    implementation libs.bcprov
    testImplementation libs.junit4
    androidTestImplementation libs.androidxTestRunner
    androidTestImplementation libs.androidxTestCore
    androidTestImplementation libs.androidxTestExtJunit
    androidTestImplementation libs.junit4
    androidTestImplementation libs.saferalloc
    androidTestImplementation libs.saferallocNativesAndroid
    implementation libs.libdatachannelJavaArchDetect
    implementation libs.libdatachannelJava
    
    implementation libs.okhttp

    implementation libs.saferalloc
    implementation libs.saferallocNativesAndroid



}
tasks.register('extractSaferallocAndroidNatives', Copy) {
    from({
        configurations.saferallocAndroidNatives.collect { zipTree(it) }
    }) {
        include 'natives/android/**/libsaferalloc.so'
        eachFile { details ->
            details.path = details.path.replaceFirst('^natives/android/', '')
        }
        includeEmptyDirs = false
    }
    into("$buildDir/generated/saferalloc/jniLibs")
}

tasks.matching { it.name.startsWith('merge') && it.name.contains('JniLibFolders') }.configureEach {
    dependsOn tasks.named('extractSaferallocAndroidNatives')
}
def sdk = System.getenv('ANDROID_SDK_ROOT') ?: System.getenv('ANDROID_HOME')
if (!sdk) {
    throw new GradleException("Android SDK not found. Set ANDROID_SDK_ROOT or ANDROID_HOME.")
}
println "Using Android SDK at: ${sdk}"
